# dcbdb

./: .dockerignore  .gitignore  CLI.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  design.md
.aiassistant/rules/: PROJECT_RULES.md
.github/workflows/: docker.yml  python-client.yml  release.yml  rust.yml  wip-ci.yml  wip-publish-crate.yml
benches/: event_leaf_node_bench.rs  event_store_benchmark.rs  grpc_append_bench.rs  grpc_append_bench_plot.py  grpc_append_cond_bench.rs  grpc_append_cond_bench_plot.py  grpc_append_with_readers_bench.rs  grpc_append_with_readers_bench_plot.py  grpc_read_bench.rs  grpc_read_with_writers_bench.rs  grpc_stream_bench.rs  header_node_bench.rs  lmdb_commit_bench.rs  lmdb_commit_flame.rs  mvcc_commit_bench.rs  mvcc_commit_flame.rs  plot_grpc_append.py  plot_grpc_append_4readers.py  plot_grpc_append_cond.py  plot_grpc_append_with_readers.py  plot_grpc_read.py  plot_grpc_read_4writers.py  plot_grpc_read_with_writers.py  plot_grpc_stream_read.py
crates/benches/: Cargo.toml
crates/benches/benches/: grpc_append_bench.rs  grpc_append_bench_plot.py  grpc_append_cond_bench.rs  grpc_append_cond_bench_plot.py  grpc_append_with_readers_bench.rs  grpc_append_with_readers_bench_plot.py  grpc_read_bench.rs  grpc_read_bench_plot.py  grpc_read_cond_bench.rs  grpc_read_cond_bench_plot.py  grpc_read_flame.rs  grpc_read_with_writers_bench.rs  grpc_read_with_writers_bench_plot.py  header_node_bench.rs  mvcc_commit_flame.rs
crates/benches/src/: lib.rs
crates/client/: Cargo.toml
crates/client/examples/: client_async_insecure.rs  client_async_secure.rs  client_sync_insecure.rs  client_sync_secure.rs
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  events_tree.rs  events_tree_nodes.rs  free_lists_tree_nodes.rs  header_node.rs  lib.rs  mvcc.rs  node.rs  page.rs  pager.rs  tags_tree.rs  tags_tree_nodes.rs
crates/dcb/: Cargo.toml
crates/dcb/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/python/umadb/: __init__.py
crates/server/: Cargo.toml
crates/server/src/: lib.rs
proto/: dcbdb.proto  event_store.proto  eventstore.proto  umadb.proto
scripts/: collect_perf_stats.sh
src/: api.rs  checkpoint.rs  client.rs  common.rs  crc.rs  db.rs  dcb.rs  dcbapi.rs  dcbdb.rs  event_store.rs  events_btree.rs  events_btree_nodes.rs  events_tree.rs  events_tree_nodes.rs  free_list_nodes.rs  free_lists_tree_nodes.rs  grpc.rs  header_node.rs  indexpages.rs  lib.rs  lmdb.rs  main.rs  mvcc.rs  mvcc_api.rs  mvcc_common.rs  mvcc_db.rs  mvcc_event_tree.rs  mvcc_node_event.rs  mvcc_node_free_list.rs  mvcc_node_header.rs  mvcc_node_tags.rs  mvcc_nodes.rs  mvcc_page.rs  mvcc_pager.rs  mvcc_tag_index.rs  mvcc_tags_tree.rs  node.rs  page.rs  pagedfile.rs  pagedindexfile.rs  (+13 more)
tests/: event_store_test.rs  grpc_event_store_test.rs  grpc_streaming_test.rs  health_check.rs  secure_grpc.rs  unconditional_append_hotspot.rs
