[package]
name = "dcbdb"
version = "0.1.0"
edition = "2024"

[dependencies]
# Add dependencies as needed for your new project
crc32fast = "1.4.2"
itertools = "0.14.0"
lru = "0.16.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v5", "v4"] }
bincode = "2.0.1"
tonic = "0.13.1"
prost = "0.13.1"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = "0.1.14"
async-trait = "0.1.73"
futures = "0.3.28"
clap = { version = "4.5.6", features = ["derive"] }
serde_derive = "1.0.219"
libc = "0.2.174"
rand = "0.9.2"
memmap2 = "0.9.4"

[dev-dependencies]
# Add test dependencies as needed
serial_test = "2.0.0"

[build-dependencies]
tonic-build = "0.13.1"
