[package]
name = "umadb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Exclude specific files from the published package
exclude = [
  "server.key",
  "server.pem",
]

[workspace]
members = [
  ".",
  "crates/core",
  "crates/proto",
  "crates/server",
  "crates/client"
]
resolver = "2"

# crates that build when running `cargo build` at the workspace root
default-members = [
  "crates/server"
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
libc = "0.2.174"
tempfile = "3.20.0"
thiserror = "2.0.12"
tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring"] }
tonic-health = "0.14.2"
tokio = { version = "1.46.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v5", "v4"] }
serial_test = "3.2.0"

[dependencies]
umadb-core = { path = "crates/core" }
umadb-client = { path = "crates/client" }
umadb-server = { path = "crates/server" }
futures = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }

[dev-dependencies]
# Add test dependencies as needed
tempfile = "3.20.0"
criterion = { version = "0.7.0", features = ["html_reports", "csv_output"] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
rcgen = "0.12"
uuid = { workspace = true }

[profile.test]
## Keep DWARF info so perf/dtrace can unwind and symbolize
debug = true        # or: debug = 2 (both are accepted; true == 2)
#
## Ensure nothing strips symbols
strip = "none"      # requires a sufficiently recent Rust toolchain
#
## Where to store debug info
## - Linux: keep in the binary (off)
## - macOS: emit a .dSYM bundle (unpacked) so Instruments/dtrace can find it
##split-debuginfo = "off"       # Linux
split-debuginfo = "unpacked" # macOS

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"

## Keep DWARF info so perf/dtrace can unwind and symbolize
debug = true        # or: debug = 2 (both are accepted; true == 2)
#
## Ensure nothing strips symbols
strip = "none"      # requires a sufficiently recent Rust toolchain
#
## Where to store debug info
## - Linux: keep in the binary (off)
## - macOS: emit a .dSYM bundle (unpacked) so Instruments/dtrace can find it
##split-debuginfo = "off"       # Linux
split-debuginfo = "unpacked" # macOS

[[bench]]
name = "grpc_read_bench"
harness = false

[[bench]]
name = "grpc_append_bench"
harness = false

[[bench]]
name = "grpc_read_with_writers_bench"
harness = false

[[bench]]
name = "grpc_append_with_readers_bench"
harness = false

[[bench]]
name = "grpc_append_cond_bench"
harness = false

[[bench]]
name = "header_node_bench"
harness = false

[[bench]]
name = "mvcc_commit_bench"
harness = false

[[bench]]
name = "mvcc_commit_flame"
harness = false

[[bench]]
name = "event_leaf_node_bench"
harness = false

[features]
default = []
flamegraphs = []
examples = []
