[package]
name = "umadb-client"
version = "0.1.0"
edition = "2024"

[dependencies]
umadb-dcb = { path = "../dcb" }
umadb-proto = { path = "../proto" }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
