[package]
name = "umadb-client"
version = {workspace = true}
edition = { workspace = true }
license = { workspace = true }

[dependencies]
umadb-dcb = { path = "../dcb" }
umadb-proto = { path = "../proto" }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
