[package]
name = "umadb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
umadb-dcb = { path = "../dcb" }
crc32fast = "1"
itertools = "0.14"
uuid = { workspace = true }
libc = { workspace = true }
memmap2 = "0.9"
rand = "0.9"
byteorder = "1"
bitflags = "2"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
