[package]
name = "umadb-proto"
version = {workspace = true}
edition = { workspace = true }
license = { workspace = true }

[dependencies]
umadb-dcb = { path = "../dcb" }
prost = "0.14.1"
tonic-prost = "0.14.2"
tonic = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
default = []
rustls = []
